@startuml
package "SmartHome" {
    skinparam class {
	BackgroundColor White
	ArrowColor Black
	BorderColor Black
    }
    skinparam Linetype ortho

    class Client {

    }

    abstract class SmartHomeComponent {
        -Enabled: boolean
        +Name: string
        +SetEnabled()
    }

    class SmartFloor {

    }

    class SmartTV {

    }
    
    class SmartCurtains {

    }

    class SmartLight {

    }

    class SmartGroup {
        -Children: SmartHomeComponent[]
        +Add()
        +Remove()
    }
    

    class SmartHomeScenario {
        +Floors: SmartGroup
        +Lights: SmartGroup
        +Curtains: SmartGroup
        +TV: SmartTV
    }

    Client --> SmartHomeComponent
    SmartHomeScenario --|> SmartHomeComponent

    SmartFloor -up-|> SmartHomeComponent
    SmartTV -up-|> SmartHomeComponent
    SmartCurtains -up-|> SmartHomeComponent
    SmartLight -up-|> SmartHomeComponent

    SmartFloor "1" -- "*" SmartGroup
    SmartTV "1" -- "*" SmartGroup
    SmartCurtains "1" -- "*" SmartGroup
    SmartLight "1" -- "*" SmartGroup

    SmartGroup --|> SmartHomeComponent
    SmartGroup --> SmartHomeScenario
  
} 
@enduml